# artifact_atlas

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md
api/: pyproject.toml
api/app/: main.py  settings.py
api/app/api/: __init__.py  _deps.py  assets.py  audit.py  bom.py  context_packs.py  inbox.py  integrations.py  policies.py  preview.py  projects.py  search.py  templates.py
api/app/cli/: __init__.py  atlas.py
api/app/mcp/: __init__.py  server.py  tools.py
api/app/models/: __init__.py  asset.py  audit.py  bom.py  context_pack.py  inbox.py  integration.py  policy.py  project.py  schemas.py  search.py  shared.py  template.py  vocabulary.py
api/app/repositories/: __init__.py  assets.py  bom.py  context_packs.py  jsonl.py  projects.py  registry_validation.py  templates.py
api/app/services/: __init__.py  assets.py  audit.py  bom_service.py  ccdash_client.py  context_pack_service.py  control_plane.py  (+10 more)
api/artifact_atlas_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: conftest.py  test_api_integration.py  test_apply_template.py  test_audit_integration.py  test_cli.py  test_content_upload.py  test_context_packs.py  test_coverage_rules.py  test_gateway.py  test_health.py  test_integrations_export.py  test_models.py  test_openapi_parity.py  test_policy_regression.py  test_registry_validation.py  test_repositories.py  test_routes_assets.py  test_routes_bom.py  test_routes_content_upload.py  test_routes_context_packs.py  test_routes_inbox.py  test_routes_policy_audit.py  test_routes_preview.py  test_routes_projects.py  test_services.py
(+381 files in other folders)
